Fix content being cut off on mobile horizontal orientation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,12 +8,15 @@
 }
 
 html {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     min-height: 100%;
 }
 
 body {
     font-family: "Chewy", sans-serif;
-    min-height: 100%;
+    width: 100%;
 }
 
 a {
@@ -99,15 +102,15 @@ h2.info-page {
 }
 
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    display: none;
+    position: fixed;
+    z-index: 1;
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
   }
 
   /* Modal Content/Box */
@@ -334,7 +337,7 @@ h2.info-page {
 @media screen and (min-width: 750px) {
     #outer-container {
         width: 100%;
-        height: 100%;
+        min-height: 100%;
     }
 
     #container {
@@ -371,7 +374,7 @@ h2.info-page {
     }
 
     #game-container {
-        height: 50vh;
+        height: 65vh;
     }
 
     #answer-container {
